fixed image on small displays

--- a/screen.css
+++ b/screen.css
@@ -16,6 +16,12 @@ body	{
 		padding-right: 4%;
 		}
 		
+		img {
+		max-width: 100%;
+		margin-left: auto;
+		margin-right: auto;
+		}
+		
 ul		{
 	list-style: circle inside none;
 	}
@@ -29,7 +35,7 @@ text-indent: 5%
 }
 
 a		{
-color: rgb(194,145,0);
+color: rgb(56,43,6);
 }
 
 h1 {
